--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "slate": "^0.70.0",
+    "slate-react": "^0.70.1"
   },
   "devDependencies": {
     "@types/node": "16.11.9",
